// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

// User & Auth
model User {
  id            String    @id @default(uuid())
  username      String    @unique
  email         String    @unique
  password_hash String
  full_name     String?
  
  role_id       String?
  role          Role?     @relation(fields: [role_id], references: [id])
  
  department    String?
  
  is_active     Boolean   @default(true)
  last_login    DateTime?
  
  created_at    DateTime  @default(now())
  updated_at    DateTime  @updatedAt
}

model Role {
  id          String   @id @default(uuid())
  name        String   @unique
  description String?
  permissions Json?
  is_active   Boolean  @default(true)
  users       User[]
  created_at  DateTime @default(now())
  updated_at  DateTime @updatedAt
}

// Educational Content

model Theory {
  id           String   @id @default(uuid())
  model_type_name String
  model3d      Model3D  @relation(fields: [model_type_name], references: [model_type_name])
  title        String
  content_html String   // Rich text content
  
  type         String   @default("General") // Original Type (General, Formula)
  theory_type_name String? 
  status       String   @default("ACTIVE") // ACTIVE, INACTIVE
  
  created_at   DateTime @default(now())
  updated_at   DateTime @updatedAt
}

model Model3D {
  model_type_name String   @id
  name            String
  description     String?
  source_url      String   // Path to GLB/GLTF file
  thumbnail_url   String?
  
  status          String   @default("ACTIVE")
  
  theories        Theory[]
  examples        Example[]
  exercises       Exercise[]
  
  created_at      DateTime @default(now())
  updated_at      DateTime @updatedAt
}

model Example {
  id           String   @id @default(uuid())
  model_type_name String
  model3d      Model3D  @relation(fields: [model_type_name], references: [model_type_name])
  title        String
  problem      String   // Problem statement
  solution     String   // Step-by-step solution
  
  type         String   @default("General")
  example_type_name String?
  status       String   @default("ACTIVE")
  reference    String?
  
  created_at   DateTime @default(now())
  updated_at   DateTime @updatedAt
}

model Exercise {
  id             String   @id @default(uuid())
  model_type_name String
  model3d        Model3D  @relation(fields: [model_type_name], references: [model_type_name])
  question       String
  options        Json?     // Stores multiple choice options: [{id: "A", text: "Option A"}, ...]
  correct_answer String?   // ID of the correct option (e.g., "A")
  level          String   @default("MEDIUM") // EASY, MEDIUM, HARD
  
  type           String   @default("General")
  exercise_type_name String?
  status         String   @default("ACTIVE")
  reference      String?
  solution       String?
  
  created_at     DateTime @default(now())
  updated_at     DateTime @updatedAt
}

