@startuml
' Tùy chỉnh đường nét vuông góc và khoảng cách chuẩn UML Distilled
skinparam linetype ortho
skinparam nodesep 70
skinparam ranksep 70

' Bảng màu chuyên nghiệp cho Entity Relationship Diagram (ERD)
skinparam package {
    BackgroundColor #FAFAFA
    BorderColor #757575
    FontColor #212121
    FontSize 14
    FontStyle bold
}
skinparam entity {
    BackgroundColor #F1F8E9
    BorderColor #2E7D32
    FontName sans-serif
}
skinparam class {
    BackgroundColor #E3F2FD
    BorderColor #1565C0
}

title Sơ đồ Quan hệ Thực thể (ERD) - PhysicMUT System

' ==========================================
' ĐỊNH NGHĨA CÁC THỰC THỂ (ENTITIES)
' ==========================================



package "2. Hệ sinh thái Học liệu (3D Content)" {
    entity "Model3D" as model3d {
        * id : String <<PK>>
        --
        * name : String
        * type : ModelType <<Enum>>
        * status : ContentStatus <<Enum>>
        * created_at : DateTime
        * updated_at : DateTime
        deleted_at : DateTime? 
        --
        __ Khóa chỉ mục (Index) __
        @@index([status, deleted_at])
    }

    entity "Theory" as theory {
        * id : String <<PK>>
        --
        * model_id : String <<FK>>
        * title : String
        * content : Text
    }

    entity "Example" as example {
        * id : String <<PK>>
        --
        * model_id : String <<FK>>
        * title : String
        * content : Text
    }

    entity "Exercise" as exercise {
        * id : String <<PK>>
        --
        * model_id : String <<FK>>
        * question : Text
        * options : JSON <<A, B, C, D>>
        * correct_answer : String
    }
}

package "1. Quản trị Người dùng (IAM)" {
    entity "Role" as role {
        * id : String <<PK>>
        --
        * name : UserRole <<Enum>>
        * permissions : JSON
        * created_at : DateTime
    }

    entity "User" as user {
        * id : String <<PK>>
        --
        * role_id : String <<FK>>
        * email : String <<Unique>>
        * password_hash : String
        * is_active : Boolean
        * created_at : DateTime
    }
}

package "3. Luyện tập (Practice)" {
    entity "ExerciseSubmission" as submission {
        * id : String <<PK>>
        --
        * user_id : String <<FK>>
        * exercise_id : String <<FK>>
        * selected_option : String
        * is_correct : Boolean
        * submitted_at : DateTime
        --
        __ Khóa chỉ mục (Index) __
        @@index([user_id, exercise_id])
    }
}


' ==========================================
' ĐỊNH NGHĨA QUAN HỆ (RELATIONSHIPS - IE NOTATION)
' ==========================================
' 1 Role có nhiều User
role ||-left-o{ user : "has"

' 1 User có nhiều Submission
user ||-up-o{ submission : "submits"

' 1 Model3D có nhiều Theory, Example, Exercise (Cascade Delete)
model3d ||--o{ theory : "contains"
model3d ||--o{ example : "contains"
model3d ||--o{ exercise : "contains"

' 1 Exercise có nhiều Submission
exercise ||-right-o{ submission : "receives"

' ==========================================
' ÉP LAYOUT CHUẨN C4 & TRÁNH CẮT CHÉO ĐƯỜNG DÂY
' ==========================================
role -[hidden]down- model3d
user -[hidden]down- submission
theory -[hidden]right- example
example -[hidden]right- exercise

@enduml